dark mode fix

--- a/src/components/Reader/Reader.module.scss
+++ b/src/components/Reader/Reader.module.scss
@@ -14,7 +14,7 @@
     & > section {
       margin: 40px 0;
       max-width: 880px;
-      background: #f4f0e7;
+      background: var(--desktop-viewer-bg);
       box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
       padding: 74px;
     }
